--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
     
     <!-- Corrected the favicon link -->
-    <link rel="icon" type="image/png" href="/lash.png" />
+    <link rel="icon" type="image/png" href="../../lash.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pink Lashes</title>
   </head>
