--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
-    
-    <!-- Corrected the favicon link -->
-    <link rel="icon" type="image/png" href="../../lash.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Allura&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="src/assets/lash.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Extensiones de pestañas en María Grande.Servicio profesional,Agenda tu cita online ahora"
+    />
     <title>Pink Lashes</title>
   </head>
   <body>
@@ -14,4 +19,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
